--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Carnival</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 
     <!-- Bootstrap  -->
     <link
@@ -27,7 +27,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- NAVBAR -->
@@ -35,7 +35,7 @@
       <div class="container-fluid justify-content-start">
         <a class="navbar-brand" href="#">
           <img
-            src="images/logo.png"
+            src="logo.png"
             alt=""
             width="45"
             height="45"
@@ -143,6 +143,6 @@
       </section>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
