--- a/movie.html
+++ b/movie.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Page</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 
     <!-- Bootstrap  -->
     <link
@@ -27,15 +27,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <link rel="stylesheet" href="./css/movie.css" />
+    <link rel="stylesheet" href="movie.css" />
   </head>
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-dark px-2">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="index.html">
           <img
-            src="images/logo.png"
+            src="logo.png"
             alt=""
             width="45"
             height="45"
@@ -110,6 +110,6 @@
       </div>
     </main>
 
-    <script src="./js/movieInfo.js"></script>
+    <script src="movieInfo.js"></script>
   </body>
 </html>
